@@ -1,5 +1,6 @@
 3.2.1 (unreleased)
 ------------------
+Issue-1973: Published PDF reports are visible by anonymous users
 Issue-1976: Publication Report "bydepartment" raises an Error
 Issue-2001: Custom Accreditation Logo not visible (Unauthorized)
 Issue-2010: Bika Listing Table: "Show More" button disappears
